<resources>
    <string name="app_name">RandomizerApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="txt_position">Position</string>
    <string-array name="positions">
        <item>suvari vaza</item>
        <item>hanmi hantachi vaza</item>
        <item>tachi vaza</item>
    </string-array>

    <string name="txt_attack">Attack</string>
    <string-array name="attack">
        //graps one hand
        <item>aihanmi katate dori</item>
        <item>gyakuhanmi katate dori</item>
        <item>kata dori</item>
        <item>mune dori</item>

        //graps pair
        <item>ryote dori</item>
        <item>morote dori</item>
        <item>ryote kata dori</item>

        //graps ushiro vaza
        <item>ushiro vaza ryote dori</item>
        <item>katate dori kubishimi</item>

        //kicks
        <item>shomen uchi</item>
        <item>yokomen uchi</item>
        <item>jodan zki</item>
        <item>mune zki</item>
        <item>mavashi zki</item>
        <item>mae giri</item>

        //grap + kick
        <item>katate dori men uchi</item>
        <item>kata dori men uchi</item>
        <item>eri dori men uchi</item>

    </string-array>

    <string name="txt_technic">Technic</string>
    <string-array name="technic">
        <item>ikkyo</item>
        <item>nikkyo</item>
        <item>sankyo</item>
        <item>yonkyo</item>
        <item>gokyo</item>

        <item>kote gaeshi</item>
        <item>shiho nage</item>

        <item>hidzhikimi osae</item>
        <item>udekimi nage</item>
        <item>juji garami</item>

        <item>sumi ottoshi</item>

        <item>ude garami</item>

        <item>irimi nage</item>
        <item>sokomen irimi nage</item>
        <item>kayten nage</item>
        <item>tenchin nage</item>
        <item>kiri ottoshi</item>

        <item>koshi nage / yama arashi</item>
        <item>aiki ottoshi</item>
        <item>kokyu nage / ho</item>

        <item>jyu vaza</item>

        <item>ganseki ottoshi</item>
        <item>sutemi</item>

    </string-array>

    <string name="txt_with_weapon">with weapon:</string>

    <string name="txt_weapon">Weapon</string>
    <string-array name="weapon">
        <item>none</item>

        <item>tanto</item>

        <item>bokken</item>
        <item>jo</item>
    </string-array>


    <string name="chb_random">Random</string>

    <string name="btn_generate">Generate</string>
    <string name="btn_generate_all_random">Generate all random</string>

</resources>
